# wikiCID

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
src/wikicid_intel/: __init__.py  __main__.py  config.py
src/wikicid_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wikicid_intel/pipeline/: __init__.py  clustering.py  embedder.py  excel_loader.py  scoring.py  text_normalize.py
src/wikicid_intel/services/: __init__.py  company_index.py
src/wikicid_intel/ui/: __init__.py  streamlit_app.py
