[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikicid-intel"
version = "0.1.0"
description = "WikiCID: búsqueda semántica y Radar Score sobre reportes Excel de empresas"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "numpy>=1.24",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "torch>=2.0",
    "torchvision>=0.15",
    "streamlit>=1.28",
    "simplemma>=1.0",
    "nltk>=3.8",
]

[project.optional-dependencies]
dev = ["ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]
